[package]
name = "protorune-rs"
version = "0.1.0"
edition = "2021"
description = "protorunes support libs for Rust sources"
license = "MIT"
repository = "https://github.com/kungfuflex/protorune-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.89"
bitcoin = "0.32.3"
metashrew-rs = { git = "https://github.com/sandshrewmetaprotocols/metashrew-rs" }
ordinals = "0.0.10"
ruint = "1.12.3"
wasm-bindgen = "0.2.92"
