[package]
name = "protorune-rs"
version = "0.1.0"
edition = "2021"
description = "protorunes support libs for Rust sources"
license = "MIT"
repository = "https://github.com/kungfuflex/protorune-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [".", "crates/*"]

[dependencies]
anyhow = "1.0.89"
bitcoin = { version = "0.30.1", features = ["rand"] }
metashrew-rs = { git = "https://github.com/sandshrewmetaprotocols/metashrew-rs" }
ordinals = { version = "0.0.10", path = "crates/ordinals" }
ruint = "1.12.3"
wasm-bindgen = "0.2.92"

[build-dependencies]
protobuf-codegen = "3.4.0"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"

