[package]
name = "protorune-support"
version = "0.1.0"
edition = "2021"
description = "protorunes support libs for Rust sources"
license = "MIT"
repository = "https://github.com/kungfuflex/protorune-rs"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin = { version = "0.30.1", features = ["rand"] }
serde = "1.0.210"
ordinals = { version = "0.0.10", path = "../ordinals" }
anyhow = "1.0.90"
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew-rs" }
